Fix #3 add the discrimination page

--- a/html/discrimination.html
+++ b/html/discrimination.html
@@ -3,24 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Preservación de la Biodiversidad</title>
-    <link rel="stylesheet" href="../css/biodiversity.css" />
+    <title>Discriminación</title>
+    <link rel="stylesheet" href="../css/discrimination.css" />
     <script src="../js/dropdown-menu.js" defer></script>
-
   </head>
   <header>
     <div class="header-container">
-      <a href="/" class="logo-link">
-        <img src="../img/logo.png" alt="Logo" />
-      </a>
       <nav class="navbar">
         <div class="dropdown">
           <button class="dropdown-btn">☰</button>
           <div class="dropdown-content">
-            <a href="home.html">🏠 Home</a>
-            <a href="pollution-plastics.html">♻️ Contaminación por Plásticos</a>
-            <a href="water-resources.html">💧 Recursos Hídricos</a>
-            <a href="sustainable-energy.html">⚡ Energía Sostenible</a>
+            <a href="home.html">Home</a>
+            <a href="africa.html">Escuela de África</a>
+            <a href="poverty.html">Pobreza</a>
           </div>
         </div>
       </nav>
@@ -28,96 +23,92 @@
   </header>
   <body>
     <main>
-      <section class="page-title">
-        <h1>Preservación de la Biodiversidad</h1>
-        <img
-          src="../img/biodiversidad1.png"
-          alt="Preservación de la biodiversidad" />
-          <p> ONG Preservación del amazonas</p>
+      <section class="hero-section">
+        <img src="../img/discrimination.jpeg" alt="discrimination" />
+        <p class="image-description">Discriminación en la sociedad</p>
+        <a href="social.html">
+          <span class="category-badge">RETOS SOCIALES</span>
+        </a>
       </section>
 
       <article class="content-section">
-        <h3><strong>¿Qué es la biodiversidad?</strong></h3>
+        <h2>Consecuencias de la discriminación</h2>
+        <div class="subsection">
+          <h3>Para las personas discriminadas</h3>
+          <ul class="impact-list">
+            <li>Baja autoestima y problemas de identidad</li>
+            <li>Problemas emocionales (ansiedad, estrés, depresión)</li>
+            <li>Pérdida de oportunidades educativas, laborales y sociales</li>
+            <li>Exclusión social y aislamiento</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <h3>Para la sociedad</h3>
+          <ul class="impact-list">
+            <li>Aumento de conflictos y violencia social</li>
+            <li>Desigualdad estructural y fragmentación</li>
+            <li>Menor desarrollo económico y cultural</li>
+            <li>Pérdida de cohesión social</li>
+          </ul>
+        </div>
+
+        <div class="subsection">
+          <h3>Impacto sobre la actividad económica</h3>
+          <ul class="impact-list">
+            <li>Pérdida de talento y productividad empresarial</li>
+            <li>Reducción de la diversidad e innovación</li>
+            <li>Aumento de la desigualdad económica</li>
+            <li>Decisiones empresariales sesgadas y menos efectivas</li>
+          </ul>
+        </div>
+      </article>
+
+      <article class="content-section">
+        <h2>¿Cómo prevenir y combatir la discriminación?</h2>
         <p>
-          - La variedad genética dentro de las especies (diferencias entre
-          individuos).<br />
-          - La variedad entre especies (animales, plantas, hongos, microbios).<br />
-          - La variedad de ecosistemas (bosques, humedales, arrecifes, desiertos,
-          etc.).
-        </p>
-        <p>
-          Tener muchos tipos de especies y ecosistemas sanos es esencial: para
-          la seguridad alimentaria, para materiales medicinales, para regular el
-          clima, purificar el agua, y para nuestro bienestar general.
+          La lucha contra la discriminación requiere un esfuerzo colectivo y
+          sostenido en múltiples frentes. <br>
+          Es fundamental educar en valores como el respeto, la empatía y la tolerancia desde edades tempranas. <br>
+          Denunciar actos discriminatorios cuando ocurran es crucial para visibilizar el problema. <br>
+          Además, debemos promover activamente la igualdad de oportunidades para todos, fomentar la diversidad en
+          escuelas, empresas y comunidades, y propiciar el diálogo intercultural
+          para romper prejuicios y estereotipos.
         </p>
       </article>
 
       <article class="content-section">
-        <h3><strong>Datos y cifras</strong></h3>
-        <p>
-          Más del 75 % de los cultivos alimentarios del mundo dependen de los
-          polinizadores, que aportan anualmente entre 235 000 y 577 000 millones
-          de dólares de los Estados Unidos a la producción agrícola mundial.<br />
-          Más del 50 % de los medicamentos modernos proceden de fuentes
-          naturales. Por ejemplo, algunos antibióticos se obtienen de hongos y
-          hay analgésicos que se elaboran a partir de sustancias vegetales.<br />
-          Los bosques albergan el 80 % de la biodiversidad terrestre, absorben
-          aproximadamente 2600 millones de toneladas de dióxido de carbono al
-          año y contribuyen a paliar el cambio climático.<br />
-          Las especies exóticas invasoras provocan el 60 % de las extinciones de
-          especies y causan daños económicos en todo el mundo por un valor anual
-          de 423 000 millones de dólares de los Estados Unidos.<br />
-          Los ecosistemas sanos proporcionan el 75 % del agua dulce, y los
-          humedales son fundamentales para purificar el agua. Sin embargo, desde
-          1970 han desaparecido el 35 % de los humedales.<br />
-          Los Pueblos Indígenas, que constituyen aproximadamente el 6 % de la
-          población mundial, son partes interesadas importantes y sujetos de
-          derechos en la conservación y gestión sostenible de la biodiversidad.
-          Estos pueblos ocupan más de 38 millones de kilómetros cuadrados de
-          suelo en todo el mundo, donde se encuentra casi el 40 % de todas las
-          áreas protegidas.
-        </p>
-      </article>
-
-      <article class="content-section">
-        <h3><strong>¿Qué amenaza muestra en nuestra sociedad?</strong></h3>
-        <img src="../img/pulmones.avif" alt="pulmones saludables y dañados" />
-        <p>
-          La degradación de los ecosistemas y la pérdida de biodiversidad se
-          están convirtiendo en problemas de salud importantes. Cuando se
-          alteran los ecosistemas, pueden verse afectados recursos como la
-          calidad del aire, el agua y los alimentos. Además, perdemos recursos
-          naturales valiosos, como especies animales y vegetales, que podrían
-          aportar beneficios para la salud y la medicina que todavía
-          desconocemos.
-        </p>
-      </article>
-
-      <article class="content-section">
-        <h3>
-          <strong>Soluciones y medidas para proteger la biodiversidad</strong>
-        </h3>
-        <p>
-          <strong>Áreas protegidas:</strong> proteger hábitats clave, reservas
-          naturales, parques nacionales, zonas marinas.<br />
-          <strong>OMEC:</strong> conservación fuera de zonas estrictamente
-          protegidas, como áreas gestionadas por comunidades locales o acuerdos
-          privados.<br />
-          <strong>Restauración ecológica:</strong> reforestación, recuperación
-          de humedales, reconexión de hábitats fragmentados.<br />
-          <strong>Agricultura y pesca sostenibles:</strong> métodos menos
-          intensivos, agroecología, reducción de pesticidas, rotación de
-          cultivos, pesca responsable.<br />
-          <strong>Control de especies invasoras:</strong> prevención de
-          introducción, control o erradicación.<br />
-          <strong>Reducción de la contaminación:</strong> tratamiento de aguas,
-          control de residuos, reducción de plásticos y emisiones.<br />
-          <strong>Políticas y leyes:</strong> normativas nacionales e
-          internacionales, incentivos económicos, cumplimiento legal y
-          participación ciudadana.<br />
-          <strong>Sensibilización y educación:</strong> informar a la sociedad,
-          fomentar hábitos sostenibles y valorar la naturaleza.
-        </p>
+        <h2>Acciones en marcha</h2>
+        <div class="actions-grid">
+          <div class="action-item">
+            <strong>Legislación antidiscriminatoria</strong>
+            <p>
+              Implementación de leyes que protegen los derechos de grupos
+              vulnerables y sancionan conductas discriminatorias.
+            </p>
+          </div>
+          <div class="action-item">
+            <strong>Programas educativos</strong>
+            <p>
+              Desarrollo de currículos inclusivos que promuevan la diversidad y
+              el respeto a las diferencias.
+            </p>
+          </div>
+          <div class="action-item">
+            <strong>Políticas empresariales</strong>
+            <p>
+              Adopción de protocolos de igualdad, diversidad e inclusión en el
+              ámbito laboral.
+            </p>
+          </div>
+          <div class="action-item">
+            <strong>Campañas de sensibilización</strong>
+            <p>
+              Iniciativas públicas para concienciar sobre los efectos negativos
+              de la discriminación.
+            </p>
+          </div>
+        </div>
       </article>
     </main>
   </body>
@@ -135,25 +126,36 @@
         <div style="flex: 1; min-width: 250px">
           <h3>Webgrafía</h3>
           <a
-            href="https://www.who.int/news-room/fact-sheets/detail/biodiversity"
+            href="https://www.ohchr.org/es/topic/discrimination"
             target="_blank"
             rel="noopener"
           >
-            Organización Mundial de la Salud (OMS)
+            ONU Derechos Humanos - Discriminación
           </a>
-          <a
-            href="https://unstats.un.org/sdgs/report/2024/Goal-15"
+          <a 
+            href="https://www.un.org/es/fight-racism/vulnerable-groups"
             target="_blank"
             rel="noopener"
           >
-            Naciones Unidas - Objetivo 15
+            Naciones Unidas - Grupos Vulnerables
+          </a>
+          <a 
+            href="https://www.ilo.org/global/topics/equality-and-discrimination/lang--es/index.htm"
+            target="_blank"
+            rel="noopener"
+          >
+            OIT - Igualdad y No Discriminación
+          </a>
+          <a 
+            href="https://www.who.int/es/news-room/fact-sheets/detail/human-rights-and-health"
+            target="_blank"
+            rel="noopener"
+          >
+            OMS - Derechos Humanos y Salud
           </a>
         </div>
-        
         <div style="text-align: right; min-width: 200px">
-          <h3>Autoras</h3>
-          <p style="margin: 5px 0">Dafne Ramirez</p>
-          <p style="margin: 5px 0">Samantha Ponce</p>
+          <p>Dafne, Ferran y Adri</p>
         </div>
       </div>
     </div>
