fix5# pobreza page

--- a/html/poverty.html
+++ b/html/poverty.html
@@ -3,23 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sustainable Energy</title>
-    <link rel="stylesheet" href="../css/pollution-plastics.css" />
+    <title>Acceso a la Educación en África</title>
+    <link rel="stylesheet" href="../css/africa.css" />
     <script src="../js/dropdown-menu.js" defer></script>
   </head>
   <header>
     <div class="header-container">
-      <a href="/" class="logo-link">
-        <img src="../img/logo.png" alt="Logo Energía Sostenible" />
-      </a>
       <nav class="navbar">
         <div class="dropdown">
-          <button class="dropdown-btn">☰ Menú</button>
+          <button class="dropdown-btn">☰</button>
           <div class="dropdown-content">
-            <a href="home.html">🏠 Home</a>
-            <a href="sustainable-energy.html">⚡ Energía Sostenible</a>
-            <a href="biodiversity.html">🌿 Biodiversidad</a>
-            <a href="water-resources.html">💧 Recursos Hídricos</a>
+            <a href="home.html">Home</a>
+            <a href="africa.html">africa</a>
+            <a href="discrimination.html">Discriminación</a>
           </div>
         </div>
       </nav>
@@ -28,86 +24,81 @@
   <body>
     <main>
       <section class="hero-section">
-        <img
-          src="../img/oceanCleanuo.jpg"
-          alt="Parque solar de Gansu Dunhuang"
-        />
-        <p class="image-description">
-          Fundador y directo ejecutivo neerlandés, Boyan Slat
-        </p>
-        <a href="environment.html">
-          <span class="category-badge">MEDIO AMBIENTE</span>
+        <img src="../img/Tongoliki.jpg.webp" alt="africa" />
+        <p class="image-description">Pobreza</p>
+        <a href="social.html">
+          <span class="category-badge">RETOS SOCIALES</span>
         </a>
       </section>
 
       <article class="content-section">
-        <h2>Ocean Cleanup</h2>
-        <p class="exemple">
-          The Ocean Cleanup, una fundación sin fines de lucro fundada en 2013
-          por el ingeniero neerlandés Boyan Slat. Su objetivo principal es
-          desarrollar y aplicar tecnología avanzada para eliminar los plásticos
-          que ya contaminan los océanos y, al mismo tiempo, prevenir que nuevos
-          desechos lleguen a ellos. La contaminación por plásticos es uno de los
-          mayores desafíos medioambientales actuales: cada año, millones de
-          toneladas de residuos plásticos terminan en los océanos, afectando
-          gravemente la vida marina, los ecosistemas costeros y la cadena
-          alimentaria humana. The Ocean Cleanup aborda este problema desde un
-          enfoque tecnológico y sistemático.
-        </p>
-      </article>
+        </style>
+</head>
+<body>
+    <header>
+        <h1>Pobresa a l'Àfrica</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Impacte sobre les persones</h2>
+            <p>La pobresa a l'Àfrica té efectes greus sobre les persones, incloent:</p>
+            <ul>
+                <li>Desnutrició i inseguretat alimentària.</li>
+                <li>Accés limitat a l'educació i a serveis sanitaris.</li>
+                <li>Augment de la mortalitat infantil i de malalties evitables.</li>
+                <li>Desplaçaments forçats i vulnerabilitat social.</li>
+            </ul>
+        </section>
 
-      <article class="content-section">
-        <h2>Tecnología de limpieza marina</h2>
-        <p class="exemple">
-          La organización ha diseñado un sistema que imita las técnicas
-          pesqueras tradicionales, pero adaptadas para la recolección de
-          plástico flotante. Su método consiste en una gran barrera flotante en
-          forma de "U", que se desplaza lentamente aprovechando las corrientes
-          oceánicas naturales. A medida que el sistema se mueve, atrapa los
-          residuos plásticos que se acumulan en su interior. Estos materiales
-          son luego recogidos por embarcaciones equipadas con rampas y cintas
-          transportadoras, que depositan los residuos en las bodegas para su
-          posterior reciclaje y clasificación. La operación se realiza a
-          profundidades de hasta 600 metros, donde se concentran grandes
-          cantidades de micro y macroplásticos.
-        </p>
-        <video src="../img/video-oceanCleanup.mp4" controls></video>
-      </article>
+        <section>
+            <h2>Impacte sobre les empreses</h2>
+            <p>Les empreses també es veuen afectades per la pobresa, amb conseqüències com:</p>
+            <ul>
+                <li>Limitació del poder adquisitiu dels clients.</li>
+                <li>Escassetat de mà d'obra qualificada.</li>
+                <li>Dificultats per expandir-se i invertir en infraestructures.</li>
+                <li>Major risc d'inestabilitat i conflictes que afecten el comerç.</li>
+            </ul>
+        </section>
 
-      <article class="content-section">
-        <h2>Datos y cifras</h2>
-        <div class="data-section">
-          <img src="../img/grafh-ocean.png" alt="Gráfico" />
-          <p>
-            El gráfico muestra cómo ha cambiado el tipo de plástico encontrado
-            en la Gran Mancha de Basura del Pacífico. Aunque se han retirado
-            grandes cantidades de residuos, los fragmentos pequeños han
-            aumentado mucho, lo que indica que los plásticos se están rompiendo
-            en pedazos más pequeños, pero todavía no han desaparecido del todo
-            🔹 Eje horizontal (X): el año o el tipo/tamaño de plástico. <br />🔹
-            Eje vertical (Y): cantidad o densidad de fragmentos plásticos
-            encontrados.<br />
-            🔹 Colores o áreas: cada color representa una categoría de tamaño
-            (macro, meso, micro). <br />
-          </p>
-        </div>
-      </article>
+        <section>
+            <h2>Impacte sobre l'activitat econòmica</h2>
+            <p>La pobresa limita el creixement econòmic per diversos motius:</p>
+            <ul>
+                <li>Reducció del consum i la demanda interna.</li>
+                <li>Baixa inversió en tecnologia i innovació.</li>
+                <li>Dependència de l'agricultura de subsistència i recursos naturals limitats.</li>
+                <li>Augment de l'economia informal i precarietat laboral.</li>
+            </ul>
+        </section>
 
-      <article class="projects">
-        <h2>Proyectos actuales</h2>
-        <p>
-          Uno de los principales campos de acción de The Ocean Cleanup es la
-          Gran Mancha de Basura del Pacífico (Great Pacific Garbage Patch), una
-          vasta acumulación de residuos plásticos situada entre Hawái y
-          California. Allí, la organización ha logrado extraer cientos de
-          toneladas de plástico, demostrando la viabilidad técnica y ambiental
-          de sus sistemas. Además, The Ocean Cleanup desarrolla proyectos en
-          ríos —como el sistema "Interceptor"— para detener los plásticos antes
-          de que lleguen al mar, atacando así el problema desde su origen.
-        </p>
-      </article>
+        <section>
+            <h2>Mesures i accions preses per minimitzar els impactes</h2>
+            <p>Algunes de les mesures implementades inclouen:</p>
+            <ul>
+                <li>Programes d'ajuda humanitària i alimentària.</li>
+                <li>Foment de l'educació i la formació professional.</li>
+                <li>Iniciatives per al desenvolupament d'infraestructures i serveis bàsics.</li>
+                <li>Microcrèdits i programes de suport a petites empreses.</li>
+                <li>Col·laboració amb organitzacions internacionals com l'ONU i ONG locals.</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Mesures suggerides</h2>
+            <p>Per combatre millor la pobresa, seria recomanable:</p>
+            <ul>
+                <li>Impulsar polítiques de redistribució de riquesa i inclusió social.</li>
+                <li>Promoure l'accés universal a l'educació i la salut.</li>
+                <li>Desenvolupar infraestructures sostenibles i accés a tecnologia.</li>
+                <li>Fomentar inversions en agricultura, indústria local i emprenedoria.</li>
+                <li>Reduir la corrupció i millorar la governança a nivell local i nacional.</li>
+            </ul>
+        </section>
     </main>
-  </body>
+</body>
+</html>
+
   <footer>
     <div class="footer-content">
       <div
@@ -122,26 +113,22 @@
         <div style="flex: 1; min-width: 250px">
           <h3>Webgrafía</h3>
           <a
-            href="https://www.nationalgeographic.com.es/naturaleza/interceptor-nuevo-aliado-contra-plastico_14875"
+            href="https://es.unesco.org/themes/education-africa"
             target="_blank"
             rel="noopener"
           >
-            The Ocean Cleanup: El “Interceptor”, un nuevo aliado contra el
-            plástico — National Geographic España
+            UNESCO
           </a>
           <a
-            href="https://www.thecircularlab.com/blog/ocean-cleanup/ "
+            href="https://www.unicef.org/education"
             target="_blank"
             rel="noopener"
           >
-            The Ocean Cleanup: Innovación para limpiar los océanos — The
-            Circular Lab
+            UNICEF
           </a>
         </div>
         <div style="text-align: right; min-width: 200px">
-          <h3>Autoras</h3>
-          <p style="margin: 5px 0">Dafne Ramirez</p>
-          <p style="margin: 5px 0">Samantha Ponce</p>
+          <p>Dafne, Ferran y Adri</p>
         </div>
       </div>
     </div>
